--- a/morseTrainer/index.css
+++ b/morseTrainer/index.css
@@ -19,6 +19,11 @@ section {
 .bold {
     font-weight: bold;
 }
+#autoSpaceInt, #autoDash {
+    width: 3em;
+    border: 1px solid lightgrey;
+    padding-left: 0.2em;
+}
 #inputBox {
     height: 1.5em;
     width: 100%;
